# nem-writer

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml  pythontests.yml
examples/: interval_change.csv  multiple_quality.csv  year_example.csv
nemwriter/: __init__.py  nem12_writer.py  nem13_writer.py  nem_writer.py
tests/: test_dataframe.py  test_empy_file.py  test_example_files.py  test_example_nem12.py  test_example_nem13.py  test_interval_length.py  test_nem12_writer.py
