[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nemwriter"
authors = [{ name = "Alex Guinman", email = "alex@guinman.id.au" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",    
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
]
keywords = ["energy", "NEM12", "NEM13"]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = ["pandas", "numpy"]

[project.optional-dependencies]
test = ["pytest >=2.7.3", "pytest-cov", "mypy", "nemreader"]
dev = ["black", "flake8", "flake8-bugbear", "pep8-naming", "flake8-builtins"]

[project.urls]
Source = "https://github.com/aguinane/nem-writer/"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --failed-first --showlocals --durations=3 --cov=nemwriter"

[tool.coverage.run]
omit = ["*/version.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
