[metadata]
name = nemwriter
version = attr: nemwriter.version.__version__
author = Alex Guinman
author_email = alex@guinman.id.au
description = Write meter readings to AEMO NEM12 and NEM13 data files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/aguinane/nem-writer
project_urls =
    Bug Tracker = https://github.com/aguinane/nem-writer/issues
keywords = energy, NEM12, NEM13
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = nemwriter
include_package_data = True

[options.extras_require]
test = pytest; nemreader>=0.2.1

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = E203,EW503
exclude = .git,__pycache__,docs,build,dist,venv,logs

[tool:pytest]
addopts = -ra --failed-first --showlocals --durations=3
